// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user list correctly toggles create user 1`] = `
.c1 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c1:hover {
  opacity: 0.90;
}

.c1:focus {
  outline: none;
}

.c1:active {
  opacity: 0.80;
}

.c1:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c2 {
  background-color: transparent;
  border: 1px solid;
}

.c3 {
  margin-left: 8px;
}

.c6 {
  padding: 40px;
  border-radius: 10px;
}

.c5 {
  display: inline;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 10;
}

.c10 {
  height: 80px;
}

.c11 {
  min-height: 50px;
  width: 100%;
  border: none;
  border-radius: 5px;
  font-family: 'Libre Franklin',sans-serif;
  font-size: 1rem;
  padding-left: 10px;
  opacity: 0.9;
  border: 1px solid transparent;
}

.c11:focus {
  outline: none;
  border: 1px solid;
}

.c7 {
  position: absolute;
  left: 0;
  right: 0;
  top: 50%;
  margin-left: auto;
  margin-right: auto;
  min-height: 250px;
  width: 100%;
  max-width: 400px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
}

.c8 {
  text-align: center;
}

.c9 {
  height: 100%;
  display: grid;
  grid-template-rows: auto;
  grid-row-gap: 20px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c12> button {
  min-width: 150px;
  margin: 16px 0px;
}

.c0 {
  margin: 0px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  margin-top: 16px;
}

@media (max-width:47.9375em) {
  .c3 {
    display: none;
  }
}

@media (max-width:47.9375em) {
  .c12 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
  }
}

<div>
  <div
    className="c0"
  >
    <h2>
      Users
    </h2>
    <button
      className="c1 c2"
      onClick={[Function]}
    >
      <i
        className="fas fa-plus"
      />
      <span
        className="c3"
      >
        Create user
      </span>
    </button>
  </div>
  <div
    className="c4"
  />
  <div
    className="c5"
    onClick={[Function]}
  >
    <div
      className="c6 c7"
    >
      <h2
        className="c8"
      >
        Create new user
      </h2>
      <form
        className="c9"
        onSubmit={[Function]}
      >
        <div>
          <div
            className="c10"
          >
            <input
              className="c11"
              name="username"
              onChange={[Function]}
              placeholder="Username"
              type="username"
              value=""
            />
          </div>
          <div
            className="c10"
          >
            <input
              className="c11"
              name="password"
              onChange={[Function]}
              placeholder="Password"
              type="password"
              value=""
            />
          </div>
          <div
            className="c10"
          >
            <input
              className="c11"
              name="confirmPassword"
              onChange={[Function]}
              placeholder="Confirm password"
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          className="c12"
        >
          <button
            className="c1 c2"
            onClick={[Function]}
          >
            Cancel
          </button>
          <button
            className="c1"
          >
            Create user
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`user list correctly toggles create user 2`] = `
.c1 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c1:hover {
  opacity: 0.90;
}

.c1:focus {
  outline: none;
}

.c1:active {
  opacity: 0.80;
}

.c1:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c2 {
  background-color: transparent;
  border: 1px solid;
}

.c3 {
  margin-left: 8px;
}

.c0 {
  margin: 0px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  margin-top: 16px;
}

@media (max-width:47.9375em) {
  .c3 {
    display: none;
  }
}

@media (max-width:47.9375em) {

}

<div>
  <div
    className="c0"
  >
    <h2>
      Users
    </h2>
    <button
      className="c1 c2"
      onClick={[Function]}
    >
      <i
        className="fas fa-plus"
      />
      <span
        className="c3"
      >
        Create user
      </span>
    </button>
  </div>
  <div
    className="c4"
  />
</div>
`;

exports[`user list doesn't try to render users on error 1`] = `
.c1 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c1:hover {
  opacity: 0.90;
}

.c1:focus {
  outline: none;
}

.c1:active {
  opacity: 0.80;
}

.c1:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c2 {
  background-color: transparent;
  border: 1px solid;
}

.c3 {
  margin-left: 8px;
}

.c0 {
  margin: 0px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  margin-top: 16px;
}

@media (max-width:47.9375em) {
  .c3 {
    display: none;
  }
}

<div>
  <div
    className="c0"
  >
    <h2>
      Users
    </h2>
    <button
      className="c1 c2"
      onClick={[Function]}
    >
      <i
        className="fas fa-plus"
      />
      <span
        className="c3"
      >
        Create user
      </span>
    </button>
  </div>
  <div
    className="c4"
  />
</div>
`;

exports[`user list refreshes on create user success 1`] = `
.c1 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c1:hover {
  opacity: 0.90;
}

.c1:focus {
  outline: none;
}

.c1:active {
  opacity: 0.80;
}

.c1:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c2 {
  background-color: transparent;
  border: 1px solid;
}

.c3 {
  margin-left: 8px;
}

.c7 {
  cursor: pointer;
}

.c5 {
  min-height: 60px;
  padding: 0px 16px;
  margin: 0px;
  display: grid;
  grid-template-columns: 3fr 1fr 25px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  margin: 0px;
}

.c8 {
  float: right;
  margin-right: 10px;
  grid-column: 3;
}

.c0 {
  margin: 0px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  margin-top: 16px;
}

@media (max-width:47.9375em) {
  .c3 {
    display: none;
  }
}

<div>
  <div
    className="c0"
  >
    <h2>
      Users
    </h2>
    <button
      className="c1 c2"
      onClick={[Function]}
    >
      <i
        className="fas fa-plus"
      />
      <span
        className="c3"
      >
        Create user
      </span>
    </button>
  </div>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <p
        className="c6"
      >
        test
      </p>
      <i
        className="c7 c8 far fa-trash-alt"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`user list renders correctly 1`] = `
.c1 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c1:hover {
  opacity: 0.90;
}

.c1:focus {
  outline: none;
}

.c1:active {
  opacity: 0.80;
}

.c1:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c2 {
  background-color: transparent;
  border: 1px solid;
}

.c3 {
  margin-left: 8px;
}

.c0 {
  margin: 0px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  margin-top: 16px;
}

@media (max-width:47.9375em) {
  .c3 {
    display: none;
  }
}

<div>
  <div
    className="c0"
  >
    <h2>
      Users
    </h2>
    <button
      className="c1 c2"
      onClick={[Function]}
    >
      <i
        className="fas fa-plus"
      />
      <span
        className="c3"
      >
        Create user
      </span>
    </button>
  </div>
  <div
    className="c4"
  />
</div>
`;

exports[`user list renders correctly 2`] = `
.c1 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c1:hover {
  opacity: 0.90;
}

.c1:focus {
  outline: none;
}

.c1:active {
  opacity: 0.80;
}

.c1:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c2 {
  background-color: transparent;
  border: 1px solid;
}

.c3 {
  margin-left: 8px;
}

.c5 {
  min-height: 60px;
  padding: 0px 16px;
  margin: 0px;
  display: grid;
  grid-template-columns: 3fr 1fr 25px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  margin: 0px;
}

.c7 {
  float: right;
  width: 80px;
  padding: 4px;
  font-weight: bold;
  text-align: center;
  border-radius: 6px;
}

.c0 {
  margin: 0px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  margin-top: 16px;
}

@media (max-width:47.9375em) {
  .c3 {
    display: none;
  }
}

<div>
  <div
    className="c0"
  >
    <h2>
      Users
    </h2>
    <button
      className="c1 c2"
      onClick={[Function]}
    >
      <i
        className="fas fa-plus"
      />
      <span
        className="c3"
      >
        Create user
      </span>
    </button>
  </div>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <p
        className="c6"
      >
        test
      </p>
    </div>
    <div
      className="c5"
    >
      <p
        className="c6"
      >
        admin
      </p>
      <p
        className="c7"
      >
        admin
      </p>
    </div>
  </div>
</div>
`;
